regression-tests/test-results/clang-15/pure2-assert-expected-not-null.cpp.output
pure2-assert-expected-not-null.cpp2:7:22: error: expected '(' for function-style cast or type construction
    std::expected<int,bool> ex {4}; 
                  ~~~^
pure2-assert-expected-not-null.cpp2:7:10: error: no member named 'expected' in namespace 'std'; did you mean 'unexpected'?
    std::expected<int,bool> ex {4}; 
    ~~~~~^~~~~~~~
         unexpected
/usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/exception:107:8: note: 'unexpected' declared here
  void unexpected() __attribute__ ((__noreturn__));
       ^
pure2-assert-expected-not-null.cpp2:9:189: error: use of undeclared identifier 'ex'
    return *cpp2::impl::assert_not_null(std::move(up)) + *cpp2::impl::assert_not_null(std::move(sp)) + *cpp2::impl::assert_not_null(std::move(op)) + *cpp2::impl::assert_not_null(std::move(ex)); 
                                                                                                                                                                                            ^
pure2-assert-expected-not-null.cpp2:14:22: error: expected '(' for function-style cast or type construction
    std::expected<int,bool> ex {std::unexpected(false)}; 
                  ~~~^
pure2-assert-expected-not-null.cpp2:14:10: error: no member named 'expected' in namespace 'std'; did you mean 'unexpected'?
    std::expected<int,bool> ex {std::unexpected(false)}; 
    ~~~~~^~~~~~~~
         unexpected
/usr/bin/../lib/gcc/x86_64-linux-gnu/13/../../../../include/c++/13/exception:107:8: note: 'unexpected' declared here
  void unexpected() __attribute__ ((__noreturn__));
       ^
pure2-assert-expected-not-null.cpp2:15:51: error: use of undeclared identifier 'ex'
    return *cpp2::impl::assert_not_null(std::move(ex)); 
                                                  ^
6 errors generated.
